--- a/src/common/styles/global.scss
+++ b/src/common/styles/global.scss
@@ -23,3 +23,13 @@ body {
                   theme('colors.body')
   );
 }
+
+.overlay-film-cover {
+  @apply absolute left-0 right-0 top-0 bottom-0;
+  background: linear-gradient(
+                  to bottom,
+                  theme('colors.body'),
+                  transparent 10%,
+                  theme('colors.body')
+  );
+}
