--- a/src/common/styles/global.scss
+++ b/src/common/styles/global.scss
@@ -19,7 +19,7 @@ body {
   background: linear-gradient(
                   to right,
                   theme('colors.body'),
-                  transparent 70%,
+                  theme('colors.primary') 70%,
                   theme('colors.body')
   );
 }
@@ -28,8 +28,7 @@ body {
   @apply absolute left-0 right-0 top-0 bottom-0;
   background: linear-gradient(
                   to bottom,
-                  theme('colors.body'),
-                  transparent 10%,
+                  theme('colors.primary') 10%,
                   theme('colors.body')
   );
 }
