adding fetching data

--- a/src/common/styles/global.scss
+++ b/src/common/styles/global.scss
@@ -19,16 +19,17 @@ body {
   background: linear-gradient(
                   to right,
                   theme('colors.body'),
-                  theme('colors.primary') 70%,
+                  transparent 80%,
                   theme('colors.body')
   );
 }
 
 .overlay-film-cover {
   @apply absolute left-0 right-0 top-0 bottom-0;
+  z-index: 2;
   background: linear-gradient(
                   to bottom,
-                  theme('colors.primary') 10%,
+                  transparent 10%,
                   theme('colors.body')
   );
 }
